# imperal-mailerlite-connector-extension

./: README.md  accounts.py  app.py  cache_models.py  capability.py  handlers_accounts.py  handlers_automations.py  handlers_campaigns.py  handlers_capability.py  handlers_forms_fields.py  handlers_groups_segments.py  handlers_subscribers.py  handlers_webhooks_reference.py  imperal.json  main.py  ml_api.py  panels.py  panels_workspace.py  params.py  pyproject.toml  response_models.py  skeleton.py
docs/: capability-matrix.md  research.md
tests/: test_accounts.py  test_automations.py  test_campaigns.py  test_campaigns_cache.py  test_capability.py  test_forms_fields.py  test_groups_segments.py  test_subscribers.py  test_webhooks_reference.py
